First homework connected with mobile phone - 50% done

--- a/DefiningClasesFirstPart/MobilePhone/MobilePhone.csproj
+++ b/DefiningClasesFirstPart/MobilePhone/MobilePhone.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>89b188de-323b-4bd8-b0ee-348447938888</ProjectGuid>
+    <ProjectGuid>{5F96938C-9527-4C47-AAF3-C827CAB92294}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MobilePhone</RootNamespace>
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Battery.cs" />
+    <Compile Include="Display.cs" />
+    <Compile Include="GSM.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
